projects/OG-Maths/src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileXParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g 2013-06-20 16:36:15

/**
 * Copyright (C) 2013 - present by OpenGamma Inc. and the OpenGamma group of companies
 * 
 * Please see distribution for license.
 */
package com.opengamma.maths.lowlevelapi.indexing;
//CSOFF


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class MissileXParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMA", "COLON", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", "END", "MINUS", "PLUS", "WS", "NUMBER"
    };
    public static final int EOF=-1;
    public static final int COMMA=4;
    public static final int COLON=5;
    public static final int LEFT_SQUARE_BRACKET=6;
    public static final int RIGHT_SQUARE_BRACKET=7;
    public static final int END=8;
    public static final int MINUS=9;
    public static final int PLUS=10;
    public static final int WS=11;
    public static final int NUMBER=12;

    // delegates
    // delegators


        public MissileXParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MissileXParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[21+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MissileXParser.tokenNames; }
    public String getGrammarFileName() { return "src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g"; }


    public static class end_access_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "end_access"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:41:1: end_access : ( END | END ( WS )* NUMBER ) ;
    public final MissileXParser.end_access_return end_access() throws RecognitionException {
        MissileXParser.end_access_return retval = new MissileXParser.end_access_return();
        retval.start = input.LT(1);
        int end_access_StartIndex = input.index();
        Object root_0 = null;

        Token END1=null;
        Token END2=null;
        Token WS3=null;
        Token NUMBER4=null;

        Object END1_tree=null;
        Object END2_tree=null;
        Object WS3_tree=null;
        Object NUMBER4_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:42:3: ( ( END | END ( WS )* NUMBER ) )
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:42:4: ( END | END ( WS )* NUMBER )
            {
            root_0 = (Object)adaptor.nil();

            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:42:4: ( END | END ( WS )* NUMBER )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==END) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==EOF||(LA2_1>=COMMA && LA2_1<=COLON)||LA2_1==RIGHT_SQUARE_BRACKET) ) {
                    alt2=1;
                }
                else if ( ((LA2_1>=WS && LA2_1<=NUMBER)) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:42:5: END
                    {
                    END1=(Token)match(input,END,FOLLOW_END_in_end_access121); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    END1_tree = (Object)adaptor.create(END1);
                    adaptor.addChild(root_0, END1_tree);
                    }

                    }
                    break;
                case 2 :
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:43:4: END ( WS )* NUMBER
                    {
                    END2=(Token)match(input,END,FOLLOW_END_in_end_access126); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    END2_tree = (Object)adaptor.create(END2);
                    adaptor.addChild(root_0, END2_tree);
                    }
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:43:8: ( WS )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==WS) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:43:9: WS
                    	    {
                    	    WS3=(Token)match(input,WS,FOLLOW_WS_in_end_access129); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    WS3_tree = (Object)adaptor.create(WS3);
                    	    adaptor.addChild(root_0, WS3_tree);
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);

                    NUMBER4=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_end_access133); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NUMBER4_tree = (Object)adaptor.create(NUMBER4);
                    adaptor.addChild(root_0, NUMBER4_tree);
                    }

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, end_access_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "end_access"

    public static class single_index_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "single_index"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:45:1: single_index : ( WS )* NUMBER ( WS )* ;
    public final MissileXParser.single_index_return single_index() throws RecognitionException {
        MissileXParser.single_index_return retval = new MissileXParser.single_index_return();
        retval.start = input.LT(1);
        int single_index_StartIndex = input.index();
        Object root_0 = null;

        Token WS5=null;
        Token NUMBER6=null;
        Token WS7=null;

        Object WS5_tree=null;
        Object NUMBER6_tree=null;
        Object WS7_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:46:3: ( ( WS )* NUMBER ( WS )* )
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:46:4: ( WS )* NUMBER ( WS )*
            {
            root_0 = (Object)adaptor.nil();

            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:46:4: ( WS )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:46:5: WS
            	    {
            	    WS5=(Token)match(input,WS,FOLLOW_WS_in_single_index144); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    WS5_tree = (Object)adaptor.create(WS5);
            	    adaptor.addChild(root_0, WS5_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            NUMBER6=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_single_index148); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NUMBER6_tree = (Object)adaptor.create(NUMBER6);
            adaptor.addChild(root_0, NUMBER6_tree);
            }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:46:17: ( WS )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==WS) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:46:18: WS
            	    {
            	    WS7=(Token)match(input,WS,FOLLOW_WS_in_single_index151); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    WS7_tree = (Object)adaptor.create(WS7);
            	    adaptor.addChild(root_0, WS7_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, single_index_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "single_index"

    public static class stepper_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stepper"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:49:1: stepper : NUMBER COLON ;
    public final MissileXParser.stepper_return stepper() throws RecognitionException {
        MissileXParser.stepper_return retval = new MissileXParser.stepper_return();
        retval.start = input.LT(1);
        int stepper_StartIndex = input.index();
        Object root_0 = null;

        Token NUMBER8=null;
        Token COLON9=null;

        Object NUMBER8_tree=null;
        Object COLON9_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:50:3: ( NUMBER COLON )
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:50:4: NUMBER COLON
            {
            root_0 = (Object)adaptor.nil();

            NUMBER8=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_stepper165); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NUMBER8_tree = (Object)adaptor.create(NUMBER8);
            adaptor.addChild(root_0, NUMBER8_tree);
            }
            COLON9=(Token)match(input,COLON,FOLLOW_COLON_in_stepper167); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            COLON9_tree = (Object)adaptor.create(COLON9);
            adaptor.addChild(root_0, COLON9_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, stepper_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "stepper"

    public static class linear_range_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "linear_range"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:53:1: linear_range : stepper NUMBER ;
    public final MissileXParser.linear_range_return linear_range() throws RecognitionException {
        MissileXParser.linear_range_return retval = new MissileXParser.linear_range_return();
        retval.start = input.LT(1);
        int linear_range_StartIndex = input.index();
        Object root_0 = null;

        Token NUMBER11=null;
        MissileXParser.stepper_return stepper10 = null;


        Object NUMBER11_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:54:3: ( stepper NUMBER )
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:54:4: stepper NUMBER
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_stepper_in_linear_range180);
            stepper10=stepper();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, stepper10.getTree());
            NUMBER11=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_linear_range182); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NUMBER11_tree = (Object)adaptor.create(NUMBER11);
            adaptor.addChild(root_0, NUMBER11_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, linear_range_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "linear_range"

    public static class ended_linear_range_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ended_linear_range"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:57:1: ended_linear_range options {backtrack=true; } : ( ( ( linear_range | NUMBER ) COLON end_access ) | ( end_access COLON linear_range ) );
    public final MissileXParser.ended_linear_range_return ended_linear_range() throws RecognitionException {
        MissileXParser.ended_linear_range_return retval = new MissileXParser.ended_linear_range_return();
        retval.start = input.LT(1);
        int ended_linear_range_StartIndex = input.index();
        Object root_0 = null;

        Token NUMBER13=null;
        Token COLON14=null;
        Token COLON17=null;
        MissileXParser.linear_range_return linear_range12 = null;

        MissileXParser.end_access_return end_access15 = null;

        MissileXParser.end_access_return end_access16 = null;

        MissileXParser.linear_range_return linear_range18 = null;


        Object NUMBER13_tree=null;
        Object COLON14_tree=null;
        Object COLON17_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:59:3: ( ( ( linear_range | NUMBER ) COLON end_access ) | ( end_access COLON linear_range ) )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==NUMBER) ) {
                alt6=1;
            }
            else if ( (LA6_0==END) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:59:5: ( ( linear_range | NUMBER ) COLON end_access )
                    {
                    root_0 = (Object)adaptor.nil();

                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:59:5: ( ( linear_range | NUMBER ) COLON end_access )
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:59:6: ( linear_range | NUMBER ) COLON end_access
                    {
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:59:6: ( linear_range | NUMBER )
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==NUMBER) ) {
                        int LA5_1 = input.LA(2);

                        if ( (LA5_1==COLON) ) {
                            int LA5_2 = input.LA(3);

                            if ( (LA5_2==NUMBER) ) {
                                alt5=1;
                            }
                            else if ( (LA5_2==END) ) {
                                alt5=2;
                            }
                            else {
                                if (state.backtracking>0) {state.failed=true; return retval;}
                                NoViableAltException nvae =
                                    new NoViableAltException("", 5, 2, input);

                                throw nvae;
                            }
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 5, 1, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 0, input);

                        throw nvae;
                    }
                    switch (alt5) {
                        case 1 :
                            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:59:7: linear_range
                            {
                            pushFollow(FOLLOW_linear_range_in_ended_linear_range206);
                            linear_range12=linear_range();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, linear_range12.getTree());

                            }
                            break;
                        case 2 :
                            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:59:20: NUMBER
                            {
                            NUMBER13=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_ended_linear_range208); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            NUMBER13_tree = (Object)adaptor.create(NUMBER13);
                            adaptor.addChild(root_0, NUMBER13_tree);
                            }

                            }
                            break;

                    }

                    COLON14=(Token)match(input,COLON,FOLLOW_COLON_in_ended_linear_range211); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    COLON14_tree = (Object)adaptor.create(COLON14);
                    adaptor.addChild(root_0, COLON14_tree);
                    }
                    pushFollow(FOLLOW_end_access_in_ended_linear_range213);
                    end_access15=end_access();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, end_access15.getTree());

                    }


                    }
                    break;
                case 2 :
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:60:5: ( end_access COLON linear_range )
                    {
                    root_0 = (Object)adaptor.nil();

                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:60:5: ( end_access COLON linear_range )
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:60:6: end_access COLON linear_range
                    {
                    pushFollow(FOLLOW_end_access_in_ended_linear_range221);
                    end_access16=end_access();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, end_access16.getTree());
                    COLON17=(Token)match(input,COLON,FOLLOW_COLON_in_ended_linear_range223); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    COLON17_tree = (Object)adaptor.create(COLON17);
                    adaptor.addChild(root_0, COLON17_tree);
                    }
                    pushFollow(FOLLOW_linear_range_in_ended_linear_range225);
                    linear_range18=linear_range();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, linear_range18.getTree());

                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, ended_linear_range_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "ended_linear_range"

    public static class stepped_range_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stepped_range"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:62:1: stepped_range : stepper linear_range ;
    public final MissileXParser.stepped_range_return stepped_range() throws RecognitionException {
        MissileXParser.stepped_range_return retval = new MissileXParser.stepped_range_return();
        retval.start = input.LT(1);
        int stepped_range_StartIndex = input.index();
        Object root_0 = null;

        MissileXParser.stepper_return stepper19 = null;

        MissileXParser.linear_range_return linear_range20 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:63:3: ( stepper linear_range )
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:63:4: stepper linear_range
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_stepper_in_stepped_range236);
            stepper19=stepper();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, stepper19.getTree());
            pushFollow(FOLLOW_linear_range_in_stepped_range238);
            linear_range20=linear_range();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, linear_range20.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, stepped_range_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "stepped_range"

    public static class induced_range_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "induced_range"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:66:1: induced_range : ( linear_range | stepped_range );
    public final MissileXParser.induced_range_return induced_range() throws RecognitionException {
        MissileXParser.induced_range_return retval = new MissileXParser.induced_range_return();
        retval.start = input.LT(1);
        int induced_range_StartIndex = input.index();
        Object root_0 = null;

        MissileXParser.linear_range_return linear_range21 = null;

        MissileXParser.stepped_range_return stepped_range22 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:67:3: ( linear_range | stepped_range )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==NUMBER) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==COLON) ) {
                    int LA7_2 = input.LA(3);

                    if ( (LA7_2==NUMBER) ) {
                        int LA7_3 = input.LA(4);

                        if ( (LA7_3==COLON) ) {
                            alt7=2;
                        }
                        else if ( (LA7_3==EOF||LA7_3==COMMA||LA7_3==RIGHT_SQUARE_BRACKET) ) {
                            alt7=1;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 7, 3, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 2, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:67:4: linear_range
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_linear_range_in_induced_range251);
                    linear_range21=linear_range();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, linear_range21.getTree());

                    }
                    break;
                case 2 :
                    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:68:4: stepped_range
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_stepped_range_in_induced_range256);
                    stepped_range22=stepped_range();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, stepped_range22.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, induced_range_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "induced_range"

    public static class bracketed_induced_range_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bracketed_induced_range"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:71:1: bracketed_induced_range : LEFT_SQUARE_BRACKET induced_range RIGHT_SQUARE_BRACKET ;
    public final MissileXParser.bracketed_induced_range_return bracketed_induced_range() throws RecognitionException {
        MissileXParser.bracketed_induced_range_return retval = new MissileXParser.bracketed_induced_range_return();
        retval.start = input.LT(1);
        int bracketed_induced_range_StartIndex = input.index();
        Object root_0 = null;

        Token LEFT_SQUARE_BRACKET23=null;
        Token RIGHT_SQUARE_BRACKET25=null;
        MissileXParser.induced_range_return induced_range24 = null;


        Object LEFT_SQUARE_BRACKET23_tree=null;
        Object RIGHT_SQUARE_BRACKET25_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:72:3: ( LEFT_SQUARE_BRACKET induced_range RIGHT_SQUARE_BRACKET )
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:72:4: LEFT_SQUARE_BRACKET induced_range RIGHT_SQUARE_BRACKET
            {
            root_0 = (Object)adaptor.nil();

            LEFT_SQUARE_BRACKET23=(Token)match(input,LEFT_SQUARE_BRACKET,FOLLOW_LEFT_SQUARE_BRACKET_in_bracketed_induced_range269); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            LEFT_SQUARE_BRACKET23_tree = (Object)adaptor.create(LEFT_SQUARE_BRACKET23);
            adaptor.addChild(root_0, LEFT_SQUARE_BRACKET23_tree);
            }
            pushFollow(FOLLOW_induced_range_in_bracketed_induced_range271);
            induced_range24=induced_range();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, induced_range24.getTree());
            RIGHT_SQUARE_BRACKET25=(Token)match(input,RIGHT_SQUARE_BRACKET,FOLLOW_RIGHT_SQUARE_BRACKET_in_bracketed_induced_range273); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            RIGHT_SQUARE_BRACKET25_tree = (Object)adaptor.create(RIGHT_SQUARE_BRACKET25);
            adaptor.addChild(root_0, RIGHT_SQUARE_BRACKET25_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 8, bracketed_induced_range_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "bracketed_induced_range"

    public static class any_range_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "any_range"
    // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:75:1: any_range : ( bracketed_induced_range | induced_range | ended_linear_range ) ;
    public final MissileXParser.any_range_return any_range() throws RecognitionException {
        MissileXParser.any_range_return retval = new MissileXParser.any_range_return();
        retval.start = input.LT(1);
        int any_range_StartIndex = input.index();
        Object root_0 = null;

        MissileXParser.bracketed_induced_range_return bracketed_induced_range26 = null;

        MissileXParser.induced_range_return induced_range27 = null;

        MissileXParser.ended_linear_range_return ended_linear_range28 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return retval; }
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:76:3: ( ( bracketed_induced_range | induced_range | ended_linear_range ) )
            // src/main/java/com/opengamma/maths/lowlevelapi/indexing/MissileX.g:76:4: ( bracketed_induced_range | induced_range | ended_linear_range )
            {
            root_0 = (Object)adaptor.nil();
